@startuml


package common {
    class NetworkManager
    class PackageFactory
    class PackageQueue
    class InputPack
    class OutputPack

    NetworkManager *-- PackageFactory
    NetworkManager o-- PackageQueue
    PackageQueue o--"0..*" InputPack
    PackageQueue o--"0..*" OutputPack
    PackageFactory -up-> InputPack
    PackageFactory -up-> OutputPack
}

package server {
    class Server
    class ServerManager
    class Room
    class Player
    class Arena

    Server *-right- NetworkManager
    Server *-- ServerManager
    ServerManager -right-|> PackageQueue
    ServerManager *-- Room
    ServerManager *-- Arena
    Room *--"0..*" Player
}

package client {
    class MessageQueue
    class Client
    class ClientManager
    class TermScreen
    class Keyboard
    class GameScene

    Client *-left- NetworkManager
    Client *-- ClientManager
    MessageQueue -left-|> PackageQueue
    ClientManager -left-|> MessageQueue
    ClientManager *-- TermScreen
    ClientManager *-- GameScene
    ClientManager *-- Keyboard
    GameScene o-left- Keyboard
    GameScene o-- TermScreen
    Keyboard o-- TermScreen
}

@enduml
